tests/negative/optimizer/mod_zero.orng
// mod_zero.orng:6:10: error: divide by 0
//     5 % 0
//         ^
// 
fn main() -> Int {
    5 % 0
}